--- a/src/components/App.css
+++ b/src/components/App.css
@@ -955,6 +955,10 @@ h4:hover .hover-menu {  opacity:1 !important; pointer-events: auto !important; }
 .resource .data.data.legal-props > [data-prop="bdo:creator"] .subgroup .subsub:first-child .hover-menu,
 .resource .data > [data-prop="bdo:creator"] .subgroup .subsub:first-child .hover-menu { display:none !important; }
 
+
+a.no-bdrc img { position:absolute; margin-top:-3px; opacity:0; } 
+h4:hover a.no-bdrc img { opacity:1; }
+
 /* ------------------------------------------------------------------------------------------------------------------------ properties/misc */
 
 .resource .data.access { text-align:center; padding-bottom:80px;}
