--- a/src/components/App.css
+++ b/src/components/App.css
@@ -786,6 +786,9 @@ h4:not(:hover) > .lang
 #perma #same { display:flex; align-items: center; padding-left:16px; cursor:pointer;}
 #perma #same .provider { display:inline-block; vertical-align: middle; line-height:0; pointer-events:none; }
 #perma #same .provider img { height:22px; display:inline-block;} 
+#perma #same .provider .img { height:22px; display:inline-flex;align-items: center; padding:5px 5px;background-color:rgba(255,255,255,0.75); border-radius:4px;
+   border:1px solid rgba(0,0,0,0.25);
+} 
 #perma #same .provider:not(:first-child) { margin-left:10px;}
 #perma #same .provider.bdr { margin-bottom:2px; }
 #perma #same .provider.bdr:not(:first-child) { margin-left:8px;}
