--- a/src/components/App.css
+++ b/src/components/App.css
@@ -787,8 +787,12 @@ h4:not(:hover) > .lang
 #perma #same .provider { display:inline-block; vertical-align: middle; line-height:0; pointer-events:none; }
 #perma #same .provider img { height:22px; display:inline-block;} 
 #perma #same .provider .img { height:22px; display:inline-flex;align-items: center; padding:5px 5px;background-color:rgba(255,255,255,0.75); border-radius:4px;
-   border:1px solid rgba(0,0,0,0.25);
+   border:2px solid #4d4d4d; font-size:12px; font-weight:700; color:#4a4a4a;
 } 
+#perma #same .provider.cbct .img { border-color:rgba(0,0,238,1); }
+#perma #same .provider.sat .img { border-color:green;}
+#perma #same .provider.src .img { border-color:#be1e23; }
+
 #perma #same .provider:not(:first-child) { margin-left:10px;}
 #perma #same .provider.bdr { margin-bottom:2px; }
 #perma #same .provider.bdr:not(:first-child) { margin-left:8px;}
