--- a/src/components/App.css
+++ b/src/components/App.css
@@ -657,10 +657,16 @@ h4:not(:hover) > .lang
 .resource .data#head { background-color:#ffffff; padding:35px; padding-bottom:45px;}
 
 
-.resource .data .header { width:100%; height:245px; background:#fce08d; display:flex;align-items:center;justify-content: center;  }
+.resource .data .header { width:100%; height:245px; background:#fce08d; display:flex;align-items:center;justify-content: center; position:relative; }
 .resource .data .header::before { content:' '; width:130px; height:130px; background:white;border-radius:50%; 
    background-size:auto;background-repeat:no-repeat; background-position: center;}
-   
+
+.resource .data .header .src { position: absolute; right: 0; bottom: 20px; width: 50px;  height: 95px; background-color: #172832; line-height:91px; cursor:pointer;}
+.resource .data .header .src img { background-color: white; width:40px;padding:2px; margin-left:3px; display:inline-block; 
+vertical-align:middle;}
+.resource .data .header .src img[src^="/BL."] { padding:0;margin:0;width:100%;}
+   /* background-size:90% auto;background-position:center;background-repeat:no-repeat; } */
+
 .resource .data.related .header::before,
 .resource.work .data .header::before { background-image:url("/icons/work.png");  }
 .resource.instance .data .header::before { background-image:url("/icons/instance_50b.png"); background-size:50px auto; }
@@ -671,6 +677,15 @@ h4:not(:hover) > .lang
 .resource.lineage .data > .header::before { background-image:url("/icons/lineage.png");  }
 
 .resource .data .header.loading::before { background-image:none !important; }
+
+/*
+.resource .data [data-prop^="adm:seeOther"],
+.resource .data [data-prop^="adm:original"],
+.resource .data [data-prop="owl:sameAs"] 
+{
+   display:none !important;
+}
+*/
 
 /* ------------------------------------------------------------------------------------------------------------------------ title/tabs */
 
