--- a/src/components/App.css
+++ b/src/components/App.css
@@ -661,8 +661,8 @@ h4:not(:hover) > .lang
 .resource .data .header::before { content:' '; width:130px; height:130px; background:white;border-radius:50%; 
    background-size:auto;background-repeat:no-repeat; background-position: center;}
 
-.resource .data .header .src { position: absolute; right: 0; bottom: 20px; width: 50px;  height: 95px; background-color: #172832; line-height:91px; cursor:pointer;}
-.resource .data .header .src img { background-color: white; width:40px;padding:2px; margin-left:3px; display:inline-block; 
+.resource .data .header .src { position: absolute; right: 0; bottom: 20px; width: 40px;  height: 70px; background-color: #172832; line-height:68px; cursor:pointer;}
+.resource .data .header .src img { background-color: white; width:calc(100% - 3px * 2 - 2px * 2);padding:2px; margin-left:3px; display:inline-block; 
 vertical-align:middle;}
 .resource .data .header .src img[src^="/BL."] { padding:0;margin:0;width:100%;}
    /* background-size:90% auto;background-position:center;background-repeat:no-repeat; } */
@@ -679,9 +679,9 @@ vertical-align:middle;}
 .resource .data .header.loading::before { background-image:none !important; }
 
 /*
-.resource .data [data-prop^="adm:seeOther"],
-.resource .data [data-prop^="adm:original"],
-.resource .data [data-prop="owl:sameAs"] 
+.resource .data [data-prop^="adm:seeOther"]:not(#a):not(.a):not(#b),
+.resource .data [data-prop^="adm:original"]:not(#a):not(.a):not(#b),
+.resource .data [data-prop^="owl:sameAs"]:not(#a):not(.a):not(#b) 
 {
    display:none !important;
 }
@@ -1331,7 +1331,7 @@ TODO
 .resource .data.legal-props > div h4 > .ulink > a:first-child { padding-left:24px; }
 .resource .data.legal-props > div h4 > .ulink > span .before { padding:0;background-position:center;width:25px;height:25px; border-radius:13px;
  }
-.resource .data.legal-props > div h4 > .ulink:not(.bdr):not(.bda) { margin-left:-21px; }
+/* .resource .data.legal-props > div h4 > .ulink:not(.bdr):not(.bda) { margin-left:-21px; } */
 
 /* .resource .data.legal-props > div h4 { min-height:27px; } */
 .resource .data.legal-props > div h4 a {  display:flex; align-items: center; }
