--- a/src/components/App.css
+++ b/src/components/App.css
@@ -860,7 +860,7 @@ vertical-align:middle;}
 .resource .data .urilink { text-decoration: underline; text-decoration-color:transparent; border:none; }
 .resource .data .urilink:hover {  text-decoration-color:#d73449; border:none;}
 
-.resource .data.ext-props .subgroup { width:calc(100% - 215px ); }
+.resource .data.ext-props .subgroup { width:calc(100% - 215px + 40px ); }
 
 .ulink { width:100%;}
 
@@ -948,15 +948,17 @@ h4:not(.first)
 */
 
 .resource .data .propCollapseHeader h4:not(.first)::before,
-.resource .data .propCollapse h4:not(.first)::before,
-.resource .data.ext-props .propCollapse > div > div > h4:not(.first)::before { padding:8px 14px !important; top:-8px !important; }
+.resource .data > :not([data-prop="bf:identifiedBy"]) .propCollapse h4:not(.first)::before,
+.resource .data.ext-props > :not([data-prop="bf:identifiedBy"]) .propCollapse > div > div > h4:not(.first)::before { padding:8px 10px !important; top:-8px !important; }
 
 
 .resource .data .propCollapseHeader h4:not(.first) .hover-menu,
-.resource .data .propCollapse h4:not(.first) .hover-menu,
-.resource .data.ext-props .propCollapse > div > div > h4:not(.first) .hover-menu { margin-top:-5px;  }
+.resource .data > :not([data-prop="bf:identifiedBy"]) .propCollapse h4:not(.first) .hover-menu,
+.resource .data.ext-props > :not([data-prop="bf:identifiedBy"]) .propCollapse > div > div > h4:not(.first) .hover-menu { top:-4px; right:-6px; }
 
-.resource .data.ext-props > [data-prop="bf:identifiedBy"] h4 .hover-menu { margin-top:0px;  }
+.resource .data.ext-props > [data-prop="bf:identifiedBy"] h4:not(.first)::before { padding-right:5px !important; }
+.resource .data.ext-props > [data-prop="bf:identifiedBy"] .propCollapse { padding-right:0;width:calc(100% + 5px); }
+.resource .data.ext-props > [data-prop="bf:identifiedBy"] h4 .hover-menu { right:-3px;  }
 
 .resource .data .group > h4 { max-width:calc(100% - 10px - 20px); padding-right:20px;}
 
@@ -967,7 +969,7 @@ h4:not(.first)
 
 
 
-.hover-menu { position:absolute; width:50px;right:-10px; top:0; display:block; z-index:10; text-align:right; pointer-events: none;opacity:0; height:28px;
+.hover-menu { position:absolute; width:50px;right:-7px; top:-1px; display:block; z-index:10; text-align:right; pointer-events: none;opacity:0; height:28px;
 line-height:12px; } 
 .hover-menu img { height:26px; vertical-align: super;  flex-shrink:0; cursor:pointer; }
 .hover-menu div span { position:absolute;color:#d73449;font-weight:900;font-size:10px; right:0; bottom:-2px;cursor:pointer;}
@@ -1331,7 +1333,7 @@ TODO
 .resource .data.legal-props > div h4 > .ulink > a:first-child { padding-left:24px; }
 .resource .data.legal-props > div h4 > .ulink > span .before { padding:0;background-position:center;width:25px;height:25px; border-radius:13px;
  }
-/* .resource .data.legal-props > div h4 > .ulink:not(.bdr):not(.bda) { margin-left:-21px; } */
+.resource .data.legal-props > div h4 > .ulink.eftr { margin-left:-21px; }
 
 /* .resource .data.legal-props > div h4 { min-height:27px; } */
 .resource .data.legal-props > div h4 a {  display:flex; align-items: center; }
