--- a/src/lib/mirador.css
+++ b/src/lib/mirador.css
@@ -77,6 +77,8 @@
     font-style: normal;
 }
 
+/* TODO show only one scroll bar whern mirador is open & no horizontal scroll when non need*/
+
 #viewer.mirador-container { position:fixed;width:100%;height:100%;top:0;left:0;z-index:100000; }
 #collection-tree > ul > li[role=treeitem]:nth-child(-n+2) { display:none; }
 /* .jstree-default .jstree-anchor {  line-height: 42px; height: 42px;  font-size: 20px; } */
