--- a/src/components/App.css
+++ b/src/components/App.css
@@ -76,16 +76,16 @@
 
 .App { min-height:100vh;}
 
-[role='tooltip'] *, .App *,.nav *,.App *::before,.App *::after { font-family:"Noto Sans", "Roboto", "Helvetica", "Arial", sans-serif !important;}
+[role='tooltip'] *, .App *,.nav *,.App *::before,.App *::after, .react-tabs * { font-family:"Noto Sans", "Roboto", "Helvetica", "Arial", sans-serif !important;}
 
 .SearchPane { width:1000px; margin:auto;margin-top:80px;max-width:90%; z-index:0;background:white;padding:50px; padding-bottom:0;
    min-height:calc(100vh - 80px - 50px * 0); padding-top:0 !important;  padding-bottom:0; }
 
 #root .App .SearchPane,
-.resource {   box-sizing: content-box; background-color:#efefef; width:1160px; margin-left:auto;margin-right:auto;
+#root > div > .resource {   box-sizing: content-box; background-color:#efefef; width:1160px; margin-left:auto;margin-right:auto;
    max-width:97%;background-color:#efefef;  position:relative;}
 
-.resource {  padding:155px 140px; padding-bottom:200px; display:flex; text-align:left; }
+#root > div > .resource {  padding:155px 140px; padding-bottom:200px; display:flex; text-align:left; }
 
 
 @media(max-width:1440px) { 
@@ -836,9 +836,23 @@ vertical-align:middle;}
 #perma #DL svg { vertical-align:-4px; font-size:18px; padding-left:0px;}
 
 #popLang { z-index:100100; }
+
 #popLang > div:last-child li { min-width:150px; display:block; height:16px;}
 #popLang > div:last-child li.is-locale { font-weight:900; }
 
+#popHoverM > div:last-child { width:953px; box-shadow:0 3px 4px #cecece,0 -1px 4px #cecece; 
+   left:calc((100vw - 1440px)/2 + 324px) !important; /* TODO fix when width under ~1450px */
+}
+#popHoverM > div:last-child .resource .data { padding-left:53px; padding-bottom:35px; }
+#popHoverM > div:last-child .resource .data .react-tabs { background-color:#fcf5e2; min-width:898px; margin-left:-25px;margin-top:15px; min-height:150px; font-size:0;}
+.react-tabs__tab { border:none;border-radius:0; width:calc(25% - 1px); font-size:10px; padding:0; text-align:center; line-height:40px; bottom:-1px !important; 
+   background-color:#fce08d; border-right:1px solid white; }
+.react-tabs__tab.react-tabs__tab--selected {background-color:#fcf5e2; }
+.react-tabs__tab.react-tabs__tab--disabled { color:rgba(0,0,0,0.25) !important; }
+
+#popHoverM + #popHoverM {display:none !important; }
+
+#popHoverM { margin-top:-18px; }
 #popSame { margin-top:-10px; }
 #popDL { margin-top:30px; }
 
@@ -849,6 +863,7 @@ vertical-align:middle;}
 #popSame a,
 #popDL a { text-decoration: none; }
 
+#popHoverM li,
 #popLang li,
 #popSame a li,
 #popDL a li { font-family:"Noto Sans";color:#4a4a4a;font-weight:600;font-size:12px;  }
@@ -1036,7 +1051,8 @@ h4:not(.first)
 .hover-menu { position:absolute; width:50px;right:-7px; top:-1px; display:block; z-index:10; text-align:right; pointer-events: none;opacity:0; height:28px;
 line-height:12px; } 
 .hover-menu img { height:26px; vertical-align: super;  flex-shrink:0; cursor:pointer; }
-.hover-menu div span { position:absolute;color:#d73449;font-weight:900;font-size:10px; right:0; bottom:-2px;cursor:pointer;}
+.hover-menu div span#nb { position:absolute;color:#d73449;font-weight:900;font-size:10px; right:0; bottom:2px;cursor:pointer;}
+.hover-menu span#anchor { display:inline-block; position:relative;}
 
 .resource .data [data-prop="bdo:note"] .sub:hover .hover-menu,
 h4:hover .hover-menu {  opacity:1 !important; pointer-events: auto !important; }
