--- a/src/components/App.css
+++ b/src/components/App.css
@@ -841,6 +841,11 @@ vertical-align:middle;}
 #popLang > div:last-child li { min-width:150px; display:block; height:16px;}
 #popLang > div:last-child li.is-locale { font-weight:900; }
 
+#popHoverM #anchor { position:absolute; right:57px; margin-top:-3px; }
+
+#popHoverM .resource .data .group h4 { width:auto !important; padding-right:0 !important;}
+#popHoverM .resource .data .group h4::before { opacity:1 !important; }
+
 #popHoverM > div:last-child { width:953px; box-shadow:0 3px 4px #cecece,0 -1px 4px #cecece; 
    left:calc((100vw - 1440px)/2 + 324px) !important; /* TODO fix when width under ~1450px */
 }
@@ -1055,6 +1060,7 @@ line-height:12px; }
 .hover-menu div span#nb { position:absolute;color:#d73449;font-weight:900;font-size:10px; right:0; bottom:2px;cursor:pointer;}
 .hover-menu span#anchor { display:inline-block; position:relative;}
 
+.hover-menu.on,
 .resource .data [data-prop="bdo:note"] .sub:hover .hover-menu,
 h4:hover .hover-menu {  opacity:1 !important; pointer-events: auto !important; }
 
