--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1002,7 +1002,7 @@ h4:not(.first)
 
 
 .resource .data [data-prop="bdo:note"] .sub:hover::before,
-.data:not(.legal-props)  h4:not(.first):hover::before 
+.data:not(.legal-props):not(#etext-scroll)  h4:not(.first):hover::before 
 {
    opacity:1 !important;
 }
@@ -1067,13 +1067,13 @@ h4:not(.first)
 
 */
 
-.resource .data .propCollapseHeader h4:not(.first)::before,
-.resource .data > :not([data-prop="bf:identifiedBy"]) .propCollapse h4:not(.first)::before,
+.resource .data > :not([data-prop="bdo:volumeHasEtext"]) .propCollapseHeader h4:not(.first)::before,
+.resource .data > :not([data-prop="bf:identifiedBy"]):not([data-prop="bdo:volumeHasEtext"]) .propCollapse h4:not(.first)::before,
 .resource .data.ext-props > :not([data-prop="bf:identifiedBy"]) .propCollapse > div > div > h4:not(.first)::before { padding:8px 10px !important; top:-8px !important; }
 
 
-.resource .data .propCollapseHeader h4:not(.first) .hover-menu,
-.resource .data > :not([data-prop="bf:identifiedBy"]) .propCollapse h4:not(.first) .hover-menu,
+.resource .data > :not([data-prop="bdo:volumeHasEtext"]) .propCollapseHeader h4:not(.first) .hover-menu,
+.resource .data > :not([data-prop="bf:identifiedBy"]):not([data-prop="bdo:volumeHasEtext"]) .propCollapse h4:not(.first) .hover-menu,
 .resource .data.ext-props > :not([data-prop="bf:identifiedBy"]) .propCollapse > div > div > h4:not(.first) .hover-menu { top:-4px; right:-6px; }
 
 .resource .data.ext-props > [data-prop="bf:identifiedBy"] h4:not(.first)::before { padding-right:5px !important; }
@@ -1372,6 +1372,8 @@ TODO
 .resource .data > [data-prop="bdo:lineageHolder"] .propCollapseHeader,
 .resource .data > [data-prop="bdo:lineageHolder"] .propCollapse { padding-right:0; width:calc(100% - 190px); }
 
+[data-prop="bdo:volumeHasEtext"].has-collapse.custom .propCollapse,
+[data-prop="bdo:volumeHasEtext"].has-collapse.custom .propCollapseHeader,
 [data-prop="bf:identifiedBy"].has-collapse.custom .propCollapse,
 [data-prop="bf:identifiedBy"].has-collapse.custom .propCollapseHeader,
 [data-prop="bdo:lineageHolder"].has-collapse.custom .propCollapse,
@@ -1396,6 +1398,20 @@ TODO
 .resource .data .sub.hoy { flex-wrap: nowrap;  }
 /* .resource .data .sub .subsub:last-child { margin-bottom:6px; } */
 .resource .data .subsub.hoyoh { flex-wrap: nowrap; display:flex; align-items: flex-start; margin-bottom:0px; }
+
+
+
+[data-prop="bdo:volumeHasEtext"].has-collapse.custom .propCollapse .subgroup,
+[data-prop="bdo:volumeHasEtext"].has-collapse.custom .propCollapseHeader .subgroup { width:100%; }
+
+#popHoverM .sub > h4.first,
+[data-prop="bdo:volumeHasEtext"].has-collapse.custom .propCollapse .sub > h4.first,
+[data-prop="bdo:volumeHasEtext"].has-collapse.custom .propCollapseHeader  .sub > h4.first { display:none; }
+
+
+#popHoverM .resource .data .sub:not(#a):not(.b) > .subgroup > h4.first a,
+[data-prop="bdo:volumeHasEtext"].has-collapse.custom .propCollapse .subsub > h4.first a,
+[data-prop="bdo:volumeHasEtext"].has-collapse.custom .propCollapseHeader .subsub > h4.first a { font-weight:600; font-size:15px;}
 
 /*
 .resource .data .sub .subgroup,
@@ -1568,7 +1584,7 @@ TODO
 .etextPage h4.page  [lang=bo] { font-size:calc( 30 * 100vw / 2500) ;  line-height:calc( 60 * 100vw / 2500) ; }
 
 /* .etextPage h4.page:last-child { padding-bottom:25px; } */
-.etextPage .overpage { overflow-x: auto;}
+.etextPage:not(.unformated) .overpage { overflow-x: auto;}
 .etextPage:not(.unformated) .overpage { padding-bottom:10px}
 .etextPage.unformated:not(.hasSeq)  { padding-bottom:25px; }
 .etextPage.unformated h4.page { white-space: normal;  }
